--- a/admin.html
+++ b/admin.html
@@ -152,7 +152,8 @@
 function renderQueue() {
   db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
     const allDocs = snapshot.docs;
-    const waitingList = allDocs.filter(doc => ["waiting", "entered"].includes(doc.data().status)); // ← enteredも対象に
+    // 「waiting」「entered」のみを表示対象にする（expiredは除外）
+    const visibleList = allDocs.filter(doc => ["waiting", "entered"].includes(doc.data().status));
 
     const list = document.getElementById("queueList");
     list.innerHTML = "";
@@ -163,7 +164,7 @@ function renderQueue() {
       }
     });
 
-    waitingList.forEach(doc => {
+    visibleList.forEach(doc => {
       const data = doc.data();
       const ticketNumber = ticketMap[doc.id] || "?";
 
@@ -174,23 +175,21 @@ function renderQueue() {
         <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
         <p><strong>状態:</strong> ${data.status === "entered" ? "入店中" : "待機中"}</p>
         <div class="btn-group">
-          ${data.status === "waiting" ? '<button class="btn-enter">入店確定</button>' : ""}
+          ${data.status === "waiting" ? '<button class="btn-enter-waiting">入店待ち</button>' : ""}
           <button class="btn-exit">${data.status === "entered" ? "キャンセル" : "退店"}</button>
         </div>
       `;
 
+      // 「入店待ち」ボタンが押されたら「入店」状態に変更
       if (data.status === "waiting") {
-        item.querySelector(".btn-enter").onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "entered" }).then(() => {
-            location.href = "admit.html"; // 入店後の画面へ遷移
-          });
+        item.querySelector(".btn-enter-waiting").onclick = () => {
+          db.collection("queue").doc(doc.id).update({ status: "entered" });
         };
       }
 
+      // 「退店」「キャンセル」ボタンが押されたらexpiredにして非表示
       item.querySelector(".btn-exit").onclick = () => {
-        db.collection("queue").doc(doc.id).update({ status: "expired" }).then(() => {
-          location.href = "expired.html"; // キャンセル・退店画面へ遷移
-        });
+        db.collection("queue").doc(doc.id).update({ status: "expired" });
       };
 
       list.appendChild(item);
