--- a/admin.html
+++ b/admin.html
@@ -149,66 +149,59 @@
       return d.toLocaleString("ja-JP", options);
     }
 
-  function renderQueue() {
+function renderQueue() {
   db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+    const allDocs = snapshot.docs;
+    const waitingList = allDocs.filter(doc => doc.data().status === "waiting" || doc.data().status === "called");
     const list = document.getElementById("queueList");
     list.innerHTML = "";
 
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const ticketId = doc.id;
-      const status = data.status;
+    allDocs.forEach((doc, index) => {
+      if (!(doc.id in ticketMap)) {
+        ticketMap[doc.id] = index + 1;
+      }
+    });
 
+    waitingList.forEach(doc => {
+      const data = doc.data();
+      const ticketNumber = ticketMap[doc.id] || "?";
       const item = document.createElement("div");
       item.className = "queue-item";
+
+      const isCalled = data.status === "called";
+
       item.innerHTML = `
-        <p><strong>番号札:</strong> ${ticketId}</p>
-        <div class="btn-group" id="btns-${ticketId}"></div>
+        <p><strong>番号札:</strong> ${ticketNumber}</p>
+        <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
+        <div class="btn-group">
+          ${isCalled 
+            ? `<button class="btn-enter">入店確定</button>` 
+            : `<button class="btn-notify">入店通知</button>`
+          }
+          <button class="btn-exit">キャンセル</button>
+        </div>
       `;
 
+      // 入店通知ボタン → status: "called"
+      item.querySelector(".btn-notify")?.addEventListener("click", () => {
+        db.collection("queue").doc(doc.id).update({ status: "called" });
+      });
+
+      // 入店確定ボタン → 完了後、Firestoreから削除（もしくはstatus: "entered"などにすることも可能）
+      item.querySelector(".btn-enter")?.addEventListener("click", () => {
+        db.collection("queue").doc(doc.id).delete(); // または update({ status: "entered" })
+      });
+
+      // キャンセルボタン → status: "expired"
+      item.querySelector(".btn-exit")?.addEventListener("click", () => {
+        db.collection("queue").doc(doc.id).update({ status: "expired" });
+      });
+
       list.appendChild(item);
-
-      const btnGroup = item.querySelector(`#btns-${ticketId}`);
-
-      // 入店通知前の状態：ボタン「入店通知」「キャンセル」を表示
-      if (status === "waiting") {
-        const callBtn = document.createElement("button");
-        callBtn.textContent = "入店通知";
-        callBtn.onclick = () => {
-          // ボタン置き換え
-          db.collection("queue").doc(ticketId).update({ status: "called" });
-        };
-
-        const cancelBtn = document.createElement("button");
-        cancelBtn.textContent = "キャンセル";
-        cancelBtn.onclick = () => {
-          db.collection("queue").doc(ticketId).update({ status: "expired" });
-        };
-
-        btnGroup.appendChild(callBtn);
-        btnGroup.appendChild(cancelBtn);
-      }
-
-      // 入店通知後の状態：「入店確定」「キャンセル」ボタンに置き換える
-      if (status === "called") {
-        const admitBtn = document.createElement("button");
-        admitBtn.textContent = "入店確定";
-        admitBtn.onclick = () => {
-          db.collection("queue").doc(ticketId).delete(); // 入店確定で削除
-        };
-
-        const cancelBtn = document.createElement("button");
-        cancelBtn.textContent = "キャンセル";
-        cancelBtn.onclick = () => {
-          db.collection("queue").doc(ticketId).update({ status: "expired" });
-        };
-
-        btnGroup.appendChild(admitBtn);
-        btnGroup.appendChild(cancelBtn);
-      }
     });
   });
 }
+
 
 
   window.onload = () => {
