--- a/admin.html
+++ b/admin.html
@@ -202,6 +202,8 @@ notifyBtn.addEventListener("click", () => {
     btnGroup.querySelector(".btn-exit").addEventListener("click", () => {
       db.collection("queue").doc(doc.id).update({ status: "expired" });
     });
+      list.appendChild(item);
+
   });
 });
 
