--- a/admin.html
+++ b/admin.html
@@ -172,8 +172,7 @@
   <p><strong>番号札:</strong> ${ticketNumber}</p>
   <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
   <div class="btn-group">
-    <button class="btn-notify">入店通知</button>
-    <button class="btn-complete">入店完了</button>
+    <button class="btn-enter">入店確定</button>
     <button class="btn-exit">退店</button>
   </div>
 `;
