--- a/admit.html
+++ b/admit.html
@@ -57,13 +57,15 @@
   <script>
     // Firebase 設定（ご自身のプロジェクトに置き換えてください）
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
     if (!firebase.apps.length) {
       firebase.initializeApp(firebaseConfig);
