--- a/admit.html
+++ b/admit.html
@@ -55,7 +55,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
   <script>
-    // Firebase 設定（ご自身のプロジェクトに置き換えてください）
+    // Firebase 設定
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
@@ -64,25 +64,24 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
+
+    // 初期化（重複チェックなし）
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    if (!firebase.apps.length) {
-      firebase.initializeApp(firebaseConfig);
-    }
-
-    const db = firebase.firestore();
-
-    // クエリパラメータからドキュメントIDを取得
+    // URLからdocIdを取得
     const params = new URLSearchParams(window.location.search);
     const docId = params.get("id");
+    console.log("取得したdocId:", docId);
 
     if (docId) {
       db.collection("queue").doc(docId)
         .onSnapshot((doc) => {
           const data = doc.data();
+          console.log("現在のstatus:", data?.status);
+
           if (data && data.status === "expired") {
-            // ステータスが expired になったら遷移
+            console.log("ステータスがexpired → 遷移します");
             window.location.href = "expired.html";
           }
         });
