--- a/admin.html
+++ b/admin.html
@@ -189,8 +189,11 @@ function renderQueue() {
         btnEnter.className = "btn-enter";
         btnEnter.textContent = "入店通知";
         btnEnter.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "entered" });
+        db.collection("queue").doc(doc.id).update({ status: "entered" }).then(() => {
+          window.open(`admit.html?id=${doc.id}`, "_blank");
+          });
         };
+
         btnGroup.appendChild(btnEnter);
       }
 
