--- a/admit.html
+++ b/admit.html
@@ -65,22 +65,24 @@
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
 
-    firebase.initializeApp(firebaseConfig);
+  firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  const urlParams = new URLSearchParams(window.location.search);
-  const docId = urlParams.get('id'); // URLに ?id=xxx の形式で渡すことを想定
+  let myDocId = sessionStorage.getItem("myDocId"); // wait.html → admit.html に遷移時に保存しておく
 
-  if (docId) {
-    db.collection("queue").doc(docId).onSnapshot((doc) => {
-      if (doc.exists) {
-        const data = doc.data();
-        if (data.status === "expired") {
-          location.href = "expired.html";
-        }
+  if (!myDocId) {
+    // 万が一 myDocId が見つからない場合
+    alert("データが見つかりません。再読み込みしてください。");
+  } else {
+    db.collection("queue").doc(myDocId).onSnapshot(doc => {
+      const data = doc.data();
+      if (!data) return;
+
+      if (data.status === "expired") {
+        location.href = "expired.html";
       }
     });
   }
-  </script>
+</script>
 </body>
 </html>
